add google merchant verification meta tag [ci skip]

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
     %meta{content: "width=1080", name: "viewport"}
+    %meta{ name: 'google-site-verification', content: 'M1fdLzjVUx7M1QYL91iZaGXVsTLPF9ovV-PHAGH2RxY' }
 
     %title= @front_presenter.meta[:seo_title]
     %meta{name: :keywords, content: @front_presenter.meta[:keywords]}
