fix several bugs, make buttons more pretty

--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -18,6 +18,9 @@
 @import bootstrap-sass/assets/stylesheets/bootstrap/navbar
 @import bootstrap-sass/assets/stylesheets/bootstrap/panels
 @import bootstrap-sass/assets/stylesheets/bootstrap/component-animations
+@import bootstrap-sass/assets/stylesheets/bootstrap/buttons
+@import bootstrap-sass/assets/stylesheets/bootstrap/button-groups
+@import bootstrap-sass/assets/stylesheets/bootstrap/badges
 
 @import base/variables
 @import base/helpers
