--- a/app/assets/stylesheets/application/global/search_bar.css.scss
+++ b/app/assets/stylesheets/application/global/search_bar.css.scss
@@ -18,9 +18,9 @@
 
     .btn {
       font-size: 24px;
-      padding: 4px 50px 10px;
-      margin-top: -1px;
-      top: 1px;
+      padding: 4px 50px 2px;
+      margin-top: -3px;
+      line-height: 37px;
     }
   }
 
