--- a/app/assets/stylesheets/application/global/footer.css.scss
+++ b/app/assets/stylesheets/application/global/footer.css.scss
@@ -100,7 +100,8 @@ footer {
 
       .btn {
         font-size: 20px;
-        padding: 4px 20px 10px;
+        padding: 4px 20px 6px;
+        top: -1px;
       }
     }
   }
