--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -56,8 +56,6 @@
 @import blocks/payments
 
 @import blocks/cart
-@import blocks/order/main
-@import blocks/order/delivery
-@import blocks/order/payment
+@import blocks/order
 
 @import blocks/menu
