--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -24,6 +24,7 @@
           - split_by_divider(@settings[:shop_phone]).each do |phone|
             %p= phone
           %p.dark-pink= "#{ @settings[:shop_work_start] } - #{ @settings[:shop_work_end] }"
+          .l-call-me
       %li= link_to t('brands'), [:brands]
       = render 'shared/includes/static_pages_links'
   = render 'shared/user_widget'
