feature Add button for send request for call user by phone

--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -21,6 +21,9 @@
 @import bootstrap-sass/assets/stylesheets/bootstrap/buttons
 @import bootstrap-sass/assets/stylesheets/bootstrap/button-groups
 @import bootstrap-sass/assets/stylesheets/bootstrap/badges
+@import bootstrap-sass/assets/stylesheets/bootstrap/modals
+@import bootstrap-sass/assets/stylesheets/bootstrap/forms
+@import bootstrap-sass/assets/stylesheets/bootstrap/input-groups
 
 @import base/variables
 @import base/helpers
@@ -54,6 +57,7 @@
 @import blocks/page
 @import blocks/brand
 @import blocks/payments
+@import blocks/call_me/index
 
 @import blocks/cart
 @import blocks/order
