--- a/app/views/devise/registrations/_sign_up_form.html.haml
+++ b/app/views/devise/registrations/_sign_up_form.html.haml
@@ -7,4 +7,4 @@
     %i.icon-arrow-bottom
   = render 'devise/registrations/includes/additional_fields_for_sign_up', f: f
 
-  %div= f.submit t('sign_up')
+  .form-group= f.submit t('sign_up'), class: 'btn btn-pink'
