feature Add form validation and some different fields masck

--- a/app/assets/stylesheets/application/blocks/call_me/index.sass
+++ b/app/assets/stylesheets/application/blocks/call_me/index.sass
@@ -1,8 +1,11 @@
 .l-call-me
+  font-size: $base-font-size
   .b-call-me-button
     padding-left: 10px
     padding-right: 10px
 
-  .l-call-me-from
-    .input-sm
-      height: 18px
+  .input-group, .form-group
+    width: 100%
+
+  .input-group
+    margin-top: 10px
