--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -1,19 +1,21 @@
+@import compass/reset
 @import compass
-
-@import foundation/normalize
 
 // sprites
 @import compass/utilities/sprites
 @import icons/*.png
 +all-icons-sprites
 
+@import base/variables
 @import bootstrap-sass/assets/stylesheets/bootstrap/variables
+
 @import bootstrap-sass/assets/stylesheets/bootstrap/mixins
 @import bootstrap-sass/assets/stylesheets/bootstrap/alerts
 @import bootstrap-sass/assets/stylesheets/bootstrap/dropdowns
 @import bootstrap-sass/assets/stylesheets/bootstrap/tables
 @import bootstrap-sass/assets/stylesheets/bootstrap/type
 @import bootstrap-sass/assets/stylesheets/bootstrap/forms
+@import bootstrap-sass/assets/stylesheets/bootstrap/input-groups
 @import bootstrap-sass/assets/stylesheets/bootstrap/navs
 @import bootstrap-sass/assets/stylesheets/bootstrap/navbar
 @import bootstrap-sass/assets/stylesheets/bootstrap/panels
@@ -22,10 +24,12 @@
 @import bootstrap-sass/assets/stylesheets/bootstrap/button-groups
 @import bootstrap-sass/assets/stylesheets/bootstrap/badges
 @import bootstrap-sass/assets/stylesheets/bootstrap/modals
-@import bootstrap-sass/assets/stylesheets/bootstrap/forms
-@import bootstrap-sass/assets/stylesheets/bootstrap/input-groups
+@import bootstrap-sass/assets/stylesheets/bootstrap/close
+@import bootstrap-sass/assets/stylesheets/bootstrap/utilities
+@import bootstrap-sass/assets/stylesheets/bootstrap/scaffolding
 
-@import base/variables
+@import fontawesome/css/font-awesome.min
+
 @import base/helpers
 @import base/theme
 
