--- a/app/views/shared/includes/_subscribe.html.haml
+++ b/app/views/shared/includes/_subscribe.html.haml
@@ -3,6 +3,9 @@
 .gray-block.subscribe
   %p= t('get_subscribes')
   = form_for SubscribedEmail.new, html: { class: 'inline-one-input' } do |f|
-    %span.wrapper<
-      = f.text_field :email, { placeholder: t('set_your_email'), value: email }
-      = f.submit t('to_subscribe'), class: 'btn btn-pink'
+    .input-group
+      %span.input-group-addon
+        %i.fa.fa-envelope
+      = f.text_field :email, { placeholder: t('set_your_email'), value: email, class: 'form-control input-lg' }
+      %span.input-group-btn
+        = f.submit t('to_subscribe'), class: 'btn btn-pink btn-lg'
