--- a/app/assets/stylesheets/application/global/user_widget.css.scss
+++ b/app/assets/stylesheets/application/global/user_widget.css.scss
@@ -6,7 +6,7 @@
     padding: 20px;
     width: 500px;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     right: 0;
     top: 60px;
     background-color: $white;
@@ -24,6 +24,9 @@
         margin-top: 20px;
         float: left;
       }
+    }
+    .btn-success {
+      line-height: 23px;
     }
   }
 }
@@ -119,16 +122,15 @@
 
     .cart-items-counter {
       position: absolute;
-      width: 15px;
-      height: 15px;
-      top: -7px;
+      top: -15px;
       left: 19px;
       @include border-radius(15px);
       background-color: $white;
-      border: 1px solid #898989;
+      border: 1px solid $btnBorderColor;
       color: #004071;
       text-align: center;
-      font-size: 11px;
+      font-size: $base-font-size - 4;
+      padding: 0 5px;
     }
   }
 
