--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -4,12 +4,13 @@
     .image= image_tag 'application/logo.png'
   #catalog.item
     - if @front_presenter.product_categories.any?
-      .btn{ data: { toggle: 'dropdown' } }
-        = t('catalog')
-        %span.caret
-      %ul.dropdown-menu.multi-level{ aria: { labelledby: 'dropdownMenu' } }
-        = build_dropdown_product_category_nested_tree(@front_presenter.product_categories)
-        %li= link_to t('sale'), [:sale, :product_categories], class: 'pink'
+      .btn-group
+        %button.dropdown-toggle.btn.btn-primary{ data: { toggle: 'dropdown' }, 'aria-haspopup' => 'true', 'aria-expanded' => 'false' }
+          = t('catalog')
+          %span.caret
+        %ul.dropdown-menu.multi-level{ aria: { labelledby: 'dropdownMenu' } }
+          = build_dropdown_product_category_nested_tree(@front_presenter.product_categories)
+          %li= link_to t('sale'), [:sale, :product_categories], class: 'pink'
   #menu.item
     %ul.menu
       %li
