feature Make order in one click

--- a/app/assets/stylesheets/application/blocks/_payments.sass
+++ b/app/assets/stylesheets/application/blocks/_payments.sass
@@ -6,7 +6,7 @@
   ul
     li
       a
-        font-size: $base-font-size + 4
+        font-size: $font-size-base + 4
       &.b-fail-wrong-message, &.b-payment-thanks-message
         margin-top: 10px
 
