--- a/app/assets/stylesheets/application/blocks/menu.sass
+++ b/app/assets/stylesheets/application/blocks/menu.sass
@@ -23,9 +23,9 @@ ul.menu
     .dropdown-menu
       li
         width: $dropDownMenuWidth
-        font-size: $base-font-size
+        font-size: $font-size-base
         margin: 5px 0
-        min-height: $base-font-size
+        line-height: $font-size-base
 
   &.sale
     li
