--- a/app/assets/stylesheets/application/blocks/order.sass
+++ b/app/assets/stylesheets/application/blocks/order.sass
@@ -1,6 +1,6 @@
 .l-order
   .btn-pink
-    font-size: $base-font-size + 1
+    font-size: $font-size-base + 1
     padding: 9px 40px 7px
 
   @import ./order/main
