--- a/app/assets/stylesheets/application/global/form.css.scss
+++ b/app/assets/stylesheets/application/global/form.css.scss
@@ -2,7 +2,7 @@
   label {
     display: block;
     margin-bottom: 3px;
-    font-size: $base-font-size;
+    font-size: $font-size-base;
     cursor: pointer;
     &.required {
       &:after {
