--- a/app/assets/stylesheets/application/base/variables.sass
+++ b/app/assets/stylesheets/application/base/variables.sass
@@ -8,7 +8,9 @@ $containerWidth      : 1168px !default
 $catalogImageWidth   : 268px !default
 $quantityInputsWidth : 35px !default
 $productMiddleWidth  : 265px !default
-$search-bar-width    : 770px !default 
+$search-bar-width    : 770px !default
+
+$product-images-width : 570px !default
 
 $userProfileLeftMenyWidth: 250px !default
 
@@ -34,17 +36,17 @@ $smokyWhite            : #efefef !default
 $veryPaleBlue          : #d1d2d3 !default
 $smokyWhite            : #ebebeb !default
 $addToCart             : #3d9ca8 !default
+$add-to-cart-hover     : #27A9B9 !default
 $dustyBlue             : #d0e3f1 !default
 $paleBlue              : #c8c8c9 !default
+$one-click             : #D66752 !default
 
 $btnBorderColor        : #898989 !default
 
 $base-font-family: Tahoma, Geneva, sans-serif !default
-$base-font-size: 14px !default
 
 // bootstrap variables
 $font-family-sans-serif: $base-font-family !default
-$font-size-base: $base-font-size !default
 $text-color: $black !default
 $body-bg: $white !default
 $link-color: $blue !default
