--- a/app/assets/stylesheets/application/blocks/call_me/index.sass
+++ b/app/assets/stylesheets/application/blocks/call_me/index.sass
@@ -1,5 +1,5 @@
 .l-call-me
-  font-size: $base-font-size
+  font-size: $font-size-base
   .b-call-me-button
     padding-left: 10px
     padding-right: 10px
@@ -9,3 +9,6 @@
 
   .input-group
     margin-top: 10px
+
+  .b-call-me-send-btn
+    line-height: $font-size-base + 6
