--- a/app/assets/stylesheets/application/global/footer.sass
+++ b/app/assets/stylesheets/application/global/footer.sass
@@ -11,7 +11,7 @@ footer
   @extend .row
 
   .menu li > a
-    font-size: $base-font-size + 2
+    font-size: $font-size-base + 6
 
   .search-bar
     float: left
@@ -29,7 +29,7 @@ footer
       width: $b-our-products-width
       margin: 0 40px 0 0
       padding-top: 10px
-      font-size: $base-font-size + 2
+      font-size: $font-size-base + 2
 
       &:nth-last-child
         margin-right: 0
@@ -70,10 +70,10 @@ footer
 
     .help-block
       ul
-        font-size: $base-font-size + 2
+        font-size: $font-size-base + 2
         li
           a
-            font-size: $base-font-size
+            font-size: $font-size-base
 
   .subscribe
     p
