--- a/app/assets/stylesheets/application/global/header.sass
+++ b/app/assets/stylesheets/application/global/header.sass
@@ -12,7 +12,7 @@ header
 // logotype
 #logo
   position: relative
-  line-height: $base-font-size + 2
+  line-height: $font-size-base + 2
 
   .image
     padding-left: 13px
@@ -23,11 +23,11 @@ header
   padding-left: 10px
 
   ul.menu
-    font-size: $base-font-size + 2
+    font-size: $font-size-base + 2
     & > li
       margin: 0 4px
       > a
-        font-size: $base-font-size
+        font-size: $font-size-base + 4
 
 .help-block
   padding-top: 2px
