--- a/app/assets/stylesheets/application/global/user_widget.css.scss
+++ b/app/assets/stylesheets/application/global/user_widget.css.scss
@@ -129,7 +129,7 @@
       border: 1px solid $btnBorderColor;
       color: #004071;
       text-align: center;
-      font-size: $base-font-size - 4;
+      font-size: $font-size-base - 4;
       padding: 0 5px;
     }
   }
