--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -20,9 +20,6 @@
 
     .b-commerce
       %ul
-        %li
-          = button_to line_items_path(product_id: product.id), class: 'btn add-to-cart single-product' do
-            %i.icon.icon-add-to-cart
-            = t('add_to_cart')
+        %li= cart_btn product.id, class: 'btn btn-add-to-cart single-product'
         %li
           = add_to_wishlist(product) if user_signed_in?
