add meta_tags gem; create locales for meta tags
add SeoField concern for concerns

create SeoSeeting model as storage for meta tags for controllers actions; [ci skip]

fix production.yml [ci skip]

fix cucumber; fix active_admin; remove deprecated code

fix

fix specs

fix specs; add ActiveAdmin custom formtastic field for display messages

add custom input in ActiveAdmin config file

move message_input to ActiveAdmin namespace

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -30,3 +30,12 @@ body {
     }
   }
 }
+
+
+.active_admin_message_input {
+  padding: 10px;
+  border: 4px solid #FFDBBB;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #FFF2DF;
+}
