--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,10 +5,9 @@
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}
     %meta{content: "width=1080", name: "viewport"}
     %meta{ name: 'google-site-verification', content: 'M1fdLzjVUx7M1QYL91iZaGXVsTLPF9ovV-PHAGH2RxY' }
+    
+    = display_meta_tags site: @settings[:shop_name], reverse: true
 
-    %title= @front_presenter.meta[:seo_title]
-    %meta{name: :keywords, content: @front_presenter.meta[:keywords]}
-    %meta{name: :description, content: @front_presenter.meta[:seo_description]}
     - if Rails.env.production?
       %meta{name: 'yandex-verification', content: '7a36516f56ed1101'}
 
