fix some bugs with making order in one click [ci skip]

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,8 @@
 
     = render 'shared/footer'
 
-    = javascript_include_tag "application"
+    = javascript_include_tag 'application'
+    = javascript_include_tag 'i18n/translations'
     = render 'shared/includes/i18n'
     = yield :javascripts
 
