--- a/app/views/shared/includes/_i18n.html.haml
+++ b/app/views/shared/includes/_i18n.html.haml
@@ -2,5 +2,5 @@
   (function(i18n) {
   i18n.default_locale = "#{I18n.default_locale}";
   i18n.locale = "#{I18n.locale}";
-  i18n.fallbacks = true;
+  i18n.fallbacks = false;
   })(I18n);
