--- a/app/assets/stylesheets/application/elements/dropdown_submenu.scss
+++ b/app/assets/stylesheets/application/elements/dropdown_submenu.scss
@@ -1,8 +1,32 @@
 .dropdown-submenu {
   position: relative;
+  .dropdown-item {
+    color: $black;
+    margin: 0px 20px;
+    line-height: 25px;
+  }
+  &:hover {
+    background-color: #f5f5f5;
+    cursor: pointer;
+  }
+  .dropdown-item:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: $gray;
+    margin-top: 10px;
+    margin-right: -10px;
+  }
+
   & > .dropdown-menu {
     top: 0;
     left: 100%;
+    min-width: 250px;
     margin-top: -6px;
     margin-left: -1px;
     @include border-radius(6px);
@@ -14,18 +38,5 @@
     & > a:after {
       border-left-color: $white;
     }
-  }
-  & > a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: $gray;
-    margin-top: 5px;
-    margin-right: -10px;
   }
 }
