--- a/app/assets/stylesheets/application/global/_footer.sass
+++ b/app/assets/stylesheets/application/global/_footer.sass
@@ -10,7 +10,7 @@ footer
   background-color: $gray
   @extend .row
 
-  .menu li > a
+  .menu li > a, .dropdown-item
     font-size: $font-size-base + 6
 
   .l-footer-search-bar
@@ -28,7 +28,7 @@ footer
     padding-bottom: 30px
     li
       width: $b-our-products-width
-      margin: 0 40px 0 0
+      margin: 0 38px 0 0
       padding-top: 10px
       font-size: $font-size-base + 2
 
