--- a/app/views/shared/includes/_line_items.html.haml
+++ b/app/views/shared/includes/_line_items.html.haml
@@ -10,10 +10,8 @@
     %li
       .b-single-product.cart-list-user-widget
         .e-photo
-          - photo = line_item.photos.default
-          - if photo
-            .e-image{ style: "background-image: url(#{ photo.file_url(:product, :related) })" }
-            = render 'line_items/includes/remove_line_item_link', line_item: line_item
+          = background_image_tag ImageDecorator.decorate(line_item).photo_url(:product, :related), class: 'e-image'
+          = render 'line_items/includes/remove_line_item_link', line_item: line_item
         .b-info
           %p.title= link_to line_item.product_title, line_item.product
           %p.price= I18n.t('views.product.with_currency', coust: price_formatted(line_item.price_with_discount))
