--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -43,6 +43,7 @@
 @import elements/order_steps
 @import elements/images
 @import elements/dropdown_submenu
+@import elements/add_to_wishlist
 
 @import blocks/product/single_product
 @import blocks/product/retable_with_reviews
@@ -53,6 +54,7 @@
 @import blocks/welcome
 @import blocks/news
 @import blocks/product
+@import blocks/product/in_stock
 @import blocks/sessions
 @import blocks/review
 @import blocks/simple_captcha
