--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -36,7 +36,7 @@
             product_path(resource, anchor: 'reviews'),
             class: 'reviews-count'
 
-        %p= icon_in_stock(resource)
+        = icon_in_stock(resource.in_stock)
         = render 'products/includes/stores', stores: @show_presenter.stores, product: resource if @show_presenter.stores.present?
 
     .b-commerce
