--- a/app/assets/stylesheets/application/blocks/cart.css.scss
+++ b/app/assets/stylesheets/application/blocks/cart.css.scss
@@ -2,6 +2,8 @@
   .clear-cart {
     text-decoration: none;
     border-bottom: 1px dotted $blue;
+    line-height: $font-size-base;
+    vertical-align: middle;
   }
   table {
     margin: 30px 0 50px;
