--- a/app/views/carts/_line_item.html.haml
+++ b/app/views/carts/_line_item.html.haml
@@ -20,7 +20,6 @@
   %td
     %ul.actions
       %li
-        %i.icon.icon-clear
-        = link_to t('delete'), line_item, method: :delete
+        = render 'line_items/includes/remove_line_item_link', line_item: line_item
       - if user_signed_in?
         %li= add_to_wishlist(line_item.product)
