--- a/app/views/shared/_banner.html.haml
+++ b/app/views/shared/_banner.html.haml
@@ -1,8 +1,8 @@
 .banner
-  = # TODO: REMOVE me after holidays and when will being availible admin for edit banners
-  =# link_to '', [:sale, :product_categories], class: 'full-block-link'
-  = link_to '', '/products/naushniki-zik-parrot-by-philippe-starck-rozovoe-zoloto-v-1-0', class: 'full-block-link'
-  = image_tag 'application/banner.png'
-
   .sale
-    = link_to t('sale'), [:sale, :product_categories]
+    = link_to [:sale, :product_categories] do
+      %span= t('sale')
+      %i.fa.fa-fw.fa-long-arrow-right
+
+  = link_to '/products/naushniki-zik-parrot-by-philippe-starck-rozovoe-zoloto-v-1-0' do
+    = image_tag 'application/banner.png'
