--- a/app/views/shared/_products_filters.html.haml
+++ b/app/views/shared/_products_filters.html.haml
@@ -7,21 +7,23 @@
   - if brands.any?
     .b-filter-brands
       %ul.brands
-        %span= t('brands')
+        %span.b-filter-label= t('brands')
         %li{ class: active_class_by_params(0, params[:brand_id].to_i) }
           = link_to t('all_brands'), '#', data: { id: 0 }
         = render partial: 'product_categories/includes/brand', collection: brands, as: :brand
 
   .b-filter-show
     %ul.show
-      %span= t('show')
+      %span.b-filter-label= t('show')
       %li{ class: active_class_by_params('popular', params[:sort_by].nil? ? 'popular' : params[:sort_by]) }
         = link_to t('popular'), '#', data: { sort_by: 'popular' }
       %li{ class: active_class_by_params('new_products', params[:sort_by]) }
         = link_to t('new_products'), '#', data: { sort_by: 'new_products' }
       %li{ class: active_class_by_params('price_reduction', params[:sort_by]) }
-        %i.reduction
-        = link_to t('product_price'), '#', data: { sort_by: 'price_reduction' }
+        = link_to '#', data: { sort_by: 'price_reduction' } do
+          %i.fa.fa-fw.fa-long-arrow-down
+          %span= t('product_price')
       %li{ class: active_class_by_params('price_increase', params[:sort_by]) }
-        %i.increase
-        = link_to t('product_price'), '#', data: { sort_by: 'price_increase' }
+        = link_to '#', data: { sort_by: 'price_increase' } do
+          %i.fa.fa-fw.fa-long-arrow-up
+          %span= t('product_price')
