--- a/app/views/orders/payment.html.haml
+++ b/app/views/orders/payment.html.haml
@@ -34,8 +34,8 @@
             = f.label :file, t('.details'), class: 'required'
             = f.file_field :file, accept: Settings.carrierwave.extension_white_list.accept
 
-      .form-group
-        = f.check_box :terms_of_service
+      .form-group.l-checkbox-terms-of-service
+        = f.check_box :terms_of_service, checked: true
         = f.label :terms_of_service, t('terms_of_service_label', link: page_path('help')).html_safe
 
       .b-form-actions.btn-group{ role: 'group' }
