hotfix Add for not authorized users ability to leave review for products

--- a/app/assets/stylesheets/application/blocks/product.sass
+++ b/app/assets/stylesheets/application/blocks/product.sass
@@ -10,6 +10,10 @@
     font-size: 28px
     margin: 0 0 5px
 
+  .b-new-review-link
+    font-size: $font-size-base + 4
+    margin-bottom: 10px
+
   .b-product-description, .b-related-products, .b-similar-products
     width: 100%
     display: table
